Fix T50008: camera DOF Distance picking from W key menu not working.